--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   background-color: #00254c !important;
 }
 
-hi {
+h1 {
   text-align: center !important;
   color: #eeb211 !important;
 }
@@ -10,10 +10,14 @@ hi {
 p {
   color: #eeb211 !important;
 }
+
 table {
-  border: 1px solid #eeb211 !important;
-  outline-style: groove !important;
+  border: 8px #eeb211 !important;
+  border-style: double !important;
   padding: 15px !important;
+  background-color: white;
+  width: 30%;
+  max-width: 90%;
 }
 
 .navbar-default {
@@ -51,9 +55,16 @@ hr{
 
 .padtable td {
   padding: 0 10px;
+  text-align: center;
 }
 
 .logo {
-width: 500;
-height: 116;
+width: 500px;
+height: auto;
+}
+
+@media (max-width: 400px){
+  .padtable td {
+    display: block;
+  }
 }
