--- a/index.css
+++ b/index.css
@@ -73,6 +73,8 @@ hr{
 
 .portaltable {
 border-collapse: initial;
+width: 30%;
+
 }
 
 .portaltable th{
@@ -109,6 +111,13 @@ height: auto;
 .na {
   width:100%;
   height: auto;
+}
+
+.width {
+  width: 50%;
+}
+
+.center { 
 }
 
 @media (max-width: 400px){
