--- a/index.css
+++ b/index.css
@@ -117,11 +117,19 @@ height: auto;
   width: 50%;
 }
 
-.center { 
+.center {
 }
 
 @media (max-width: 400px){
   .padtable td {
     display: block;
   }
+}
+
+.results{
+  background-color: white;
+  color: black;
+  width: 30% !important;
+  align-items: center;
+
 }
